Fixed staff page so it isn't awful looking on smaller screens

--- a/index.css
+++ b/index.css
@@ -11,6 +11,11 @@
   background-color: transparent;
 }
 
+.profile-img {
+  width: 180px;
+  border-radius: 10px;
+}
+
 div#container {
   margin-left: auto;
   margin-right: auto;
